feat: improving route naming
